# robo

./: README.md
arduino/joy/: joy.ino
arduino/joy_receiver_to_motor/: joy_receiver_to_motor.ino
arduino/motor/: motor.ino
brains/: .gitignore  Dockerfile  README.md  docker-compose.yml  netplan-config.yaml  resin-static-eth  start-stack
brains/runtime/: Dockerfile  compressed_install.sh
brains/systemd/: robot_prometheus_node_exporter.service  robot_runtime.service
brains/tx2/: Dockerfile  README.md  xusb_sil_rel_fw_1206
brains/udev/: 60-cp2112.rules  99-xpad.rules
dev-img/: Dockerfile  Dockerfile_rosdep  README.md  autodock.Dockerfile  gather-rosdeps.sh  kojet.Dockerfile  setup.bash
models/: servobracket.FCStd  wheel.FCStd  wheel2.FCStd
models/ParametricOmniwheel/: Base.stl  OmniWheel.scad  SubWheel.stl
monitoring/: README.md  docker-compose.yml  prometheus.yml  targets.json
power/: bolt_spacer.scad  bolt_spacer.stl  rrc_holder_v2.scad  rrchold_06_usb.stl
ros/: .dockerignore  .gitignore  Dockerfile  README.md  attach  crossbuild  defaults.yaml  docker-compose.yml  homey.repos  nativebuild  operator.yaml  rebuild-img  robot_runtime.service  stack.Dockerfile  start2  startimg  startimg-arm  startimg-nvidia  testing-setup.bash
ros/src/fake_robo/: CMakeLists.txt  package.xml
ros/src/fake_robo/src/: fake_base.cpp
